--- a/src/app/stylesheets/shared/_shared_mobile_nav.scss
+++ b/src/app/stylesheets/shared/_shared_mobile_nav.scss
@@ -52,5 +52,40 @@
   border-left: 2px solid white;
   border-radius: 0;
   height: 7vh !important;
+}
 
+#button-box-mobile {
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+#give-feedback-mobile {
+  background-color: white;
+  color: $purple;
+  border: 2px solid $lightpurple;
+  width: 42vw;
+  padding: 0;
+  box-shadow: none;
+  font-size:2.3vh;
+  height: 7.5vh;
+  letter-spacing: 1.1px;
+  margin-left: 2vw;
+  font-family: $futura-book-stack;
+  border-radius: 5px;
+}
+
+
+#share-mobile {
+  background-color: white;
+  color: $red;
+  border: 2px solid $red;
+  width: 42vw;
+  height: 7.5vh;
+  padding: 0;
+  font-size:2.3vh;
+  box-shadow: none;
+  letter-spacing: 1.1px;
+  margin-right: 2vw;
+  font-family: $futura-book-stack;
+  border-radius: 5px;
 }
